# lemurs

./: .gitignore  Cargo.toml  cppsrc.rs
_8080/: Cargo.toml  README.md  build.rs
_8080/cpp8080/: Cargo.toml
_8080/cpp8080/examples/: CMakeLists.txt  cpudiag.cpp  invaders.h  poc.cpp
_8080/cpp8080/include/: rs8080.h
_8080/cpp8080/src/: lib.rs  rs8080.cpp
_8080/examples/: CMakeLists.txt  demo.rs  diag.cpp
_8080/include/: rs8080.h
_8080/src/: cpp.rs  lib.rs  rs8080.cpp  simple.rs
_8080/src/chip/: access.rs  execution.rs  mod.rs
_8080/src/chip/execution/: mod.rs  opcode.rs  tests.rs
_8080/src/chip/execution/opcode/: mod.rs  tests.rs
_8080/tests/: cpudiag.rs
_8080/tests/src/: cp_m.rs
cpp_alloc.rs/: Cargo.toml  build.rs
cpp_alloc.rs/src/: alloc.cpp  lib.rs
cpp_panic.rs/: Cargo.toml  build.rs
cpp_panic.rs/src/: lib.rs  panic.cpp
