[package]
name = "lemurs-8080"
version = "0.5.0"
edition = "2021"
authors = ["Nevin Flanagan"]
description = "An emulator for the Intel 8080 microprocessor"
readme = "README.md"
license = "UPL-1.0"

[lib]
crate-type = ["rlib", "staticlib"]

[[test]]
name = "cpudiag"
required-features = ["std", "open"]

[dependencies]
disclose = "0"
cruppers = { version = ">= 0.4", default-features = false, optional = true }

[features]
default = ["std"]
std = []
open = []
cpp = ["cpp_panic", "cpp_alloc"]
cpp_panic = ["cruppers/exception", "_cpp"]
cpp_alloc = ["cruppers/memory", "_cpp"]
_cpp = []

[build-dependencies]
cc = ">= 1.0.0"