[package]
name = "cpp8080"
version = "0.1.0"
edition = "2021"
build = "../../cppsrc.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
cpp_panic = { workspace = true, optional = true }
cpp_alloc = { workspace = true, optional = true }
_8080 = { path = "..", default-features = false }

[features]
default = ["dep:cpp_panic", "dep:cpp_alloc"]

[build-dependencies]
cc = ">= 1.0.0"