[package]
name = "cpp8080"
version = "0.1.0"
edition = "2021"
build = "../../cppsrc.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
cruppers = { version = "0.4", default-features = false, optional = true }
_8080 = { path = "..", default-features = false }

[features]
default = ["cpp_panic", "cpp_alloc"]
cpp_panic = ["cruppers/exception"]
cpp_alloc = ["cruppers/memory"]

[build-dependencies]
cc = ">= 1.0.0"